# cafce25bot

./: .gitignore  README.md  chatbot.cabal  chatbot.yaml  package.yaml
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux/5f16ea143f59972321329454261323f5b78c872f49bae0ccef65557e115c5005/8.8.4/doc/chatbot-0.1.0.0/: LICENSE
app/: Main.hs
src/: BotConfig.hs  Main.hs  ServerMessage.hs
test/: ServerMessageSpec.hs
